# aguardia_server

./: .gitignore  Cargo.toml  ELIXIR_PORT.md  example.sh
aguardia_elixir/: .gitignore  IMPLEMENTATION_PLAN.md  README.md  example.sh  mix.exs  run_tests.sh
aguardia_elixir/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
aguardia_elixir/lib/: aguardia.ex  aguardia_web.ex
aguardia_elixir/lib/aguardia/: application.ex  burrito_copy_nif.ex  crypto.ex  email_codes.ex  mailer.ex  release.ex  repo.ex  server_state.ex
aguardia_elixir/lib/aguardia/schema/: data.ex  user.ex
aguardia_elixir/lib/aguardia_web/: commands.ex  endpoint.ex  router.ex  socket_handler.ex
aguardia_elixir/lib/aguardia_web/controllers/: error_json.ex  status_controller.ex
aguardia_elixir/priv/repo/migrations/: 20240101000000_create_tables.exs
aguardia_elixir/test/: test_helper.exs
aguardia_elixir/test/aguardia/: crypto_test.exs  email_codes_test.exs  fuzzing_test.exs  load_test.exs
aguardia_elixir/test/aguardia_web/: commands_test.exs  protocol_test.exs
migrations/: 0001_init.sql
src/: config.rs  crypto25519.rs  email.rs  handlers_ws.rs  hub.rs  main.rs  postgres.rs  server.rs  server_0x00.rs
src/config/: default.toml
www/: index.html  mine.js  module.js  style.css  wasm_crypto25519.js  wasm_crypto25519_bg.wasm  ws_client.js
www/js/: DESIGN.js  m.js  main.css  rg.js  style.css
www/panel/: GRAF.html  GRAF.js  INFO.html  INFO.js  info.tmpl  sys.css
